tests/errors/compiler/no_rightsqbr_in_slice/no_]_in_initialization.c
void main()
{
	int A[5];
	int b = A[3;

	printid(b);
}